[REFACTO] utilisation Integer/Long.valueOf ou de valeurs littérales